--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.27",
+    "create-react-class": "^15.6.3",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.40",
     "gatsby-plugin-emotion": "^4.1.21",
@@ -21,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-emoji": "^0.5.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
