Images should deploy correctly
If you do a `gatsby build`, the .cache dir will store some cached files
that will cause images to load incorrectly with a prefix path.
Made changes to the npm scripts in package.json that should prevent this
going forward.

--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
         "url": "https://github.com/gatsbyjs/gatsby-starter-default"
     },
     "scripts": {
-        "build": "gatsby build",
+        "build": "gatsby build --prefix-paths",
         "clean": "gatsby clean",
+        "deploy": "gatsby clean; gatsby build --prefix-paths && gh-pages -d public",
         "develop": "gatsby develop",
         "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "serve": "gatsby serve",
+        "serve": "gatsby serve --prefix-paths",
         "start": "npm run develop",
-        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
     },
     "version": "0.1.0"
 }
