--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/core": "^10.0.27",
         "create-react-class": "^15.6.3",
+        "disqus-react": "^1.0.9",
         "gatsby": "^2.18.12",
         "gatsby-image": "^2.2.40",
         "gatsby-plugin-emotion": "^4.1.21",
