--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gatsby": "^2.18.12",
         "gatsby-image": "^2.2.40",
         "gatsby-plugin-emotion": "^4.1.21",
+        "gatsby-plugin-feed": "^2.5.11",
         "gatsby-plugin-google-analytics": "^2.3.13",
         "gatsby-plugin-manifest": "^2.2.31",
         "gatsby-plugin-offline": "^3.0.27",
