--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
     },
     "dependencies": {
         "@emotion/core": "^10.0.27",
+        "@mdx-js/mdx": "^1.6.16",
+        "@mdx-js/react": "^1.6.16",
         "create-react-class": "^15.6.3",
         "disqus-react": "^1.0.9",
         "gatsby": "^2.18.12",
         "gatsby-image": "^2.2.40",
         "gatsby-plugin-emotion": "^4.1.21",
-        "gatsby-plugin-feed": "^2.5.11",
+        "gatsby-plugin-feed-mdx": "^1.0.1",
         "gatsby-plugin-google-analytics": "^2.3.13",
         "gatsby-plugin-manifest": "^2.2.31",
+        "gatsby-plugin-mdx": "^1.2.34",
         "gatsby-plugin-offline": "^3.0.27",
         "gatsby-plugin-react-helmet": "^3.1.16",
         "gatsby-plugin-sharp": "^2.6.10",
         "gatsby-plugin-typography": "^2.3.21",
         "gatsby-remark-images": "^3.3.9",
         "gatsby-source-filesystem": "^2.1.46",
-        "gatsby-transformer-remark": "^2.6.48",
         "gatsby-transformer-sharp": "^2.3.14",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
